# uv-oasis

./: .dockerignore  .gitignore  LICENSE  README.md  build.py  config.toml  pyproject.toml
.github/workflows/: build-and-push.yml  ci.yml
docker/: Dockerfile  entrypoint.sh  nginx.conf
tests/: test_config.py  test_downloader.py  test_filter.py  test_index_generator.py  test_metadata.py  test_models.py  test_utils.py
uv_oasis/: __init__.py  config.py  downloader.py  filter.py  index_generator.py  metadata.py  models.py  utils.py
