[project]
name = "uv-oasis"
version = "0.1.0"
description = "Drop-in offline Python mirror for uv. Serve python-build-standalone binaries seamlessly in air-gapped networks."
readme = "README.md"
license = "MIT"
authors = [
  { name = "pTaunium", email = "pTaunium@gmail.com" }
]
requires-python = ">=3.14"
dependencies = [
  "httpx>=0.28,<1",
]

[dependency-groups]
dev = [
  "pytest~=9.0",
  "pytest-cov~=7.0",
  "ruff~=0.15",
  "ty>=0.0.49",
]

[tool.ruff]
line-length = 88
indent-width = 4

[tool.ruff.lint]
select = [
  "E",     # pycodestyle error
  "W",     # pycodestyle warning
  "I",     # isort
  "N",     # pep8-naming
  "F",     # Pyflakes
  "C90",   # McCabe
  "ANN",   # flake8-annotations
  "ASYNC", # flake8-async
  "S",     # flake8-bandit
  "B",     # flake8-bugbear
  "A",     # flake8-builtins
  "C4",    # flake8-comprehensions
  "PIE",   # flake8-pie
  "PT",    # flake8-pytest-style
  "RET",   # flake8-return
  "SIM",   # flake8-simplify
  "PERF",  # Perflint
  "FURB",  # refurb
  "UP",    # pyupgrade
  "RUF",   # Ruff-specific rules
]
ignore = [
  "E501", # line-too-long
]

[tool.ruff.lint.isort]
section-order = [
  "future",
  "standard-library",
  "third-party",
  "first-party",
  "local-folder",
]

[tool.ruff.format]
docstring-code-format = true
docstring-code-line-length = "dynamic"

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
  "S101", # assert
  "S105", # hardcoded-password-string
  "S106", # hardcoded-password-func-arg
  "S107", # hardcoded-password-default
]

[tool.coverage.run]
source = ["src"]
